added neutral zone

--- a/desktop/TODO
+++ b/desktop/TODO
@@ -6,7 +6,11 @@ Sprint 1
 	+ drones fighting
 	+ dones can destroy base station
 	
-	
+Sprin 2
+	+ neutral spots to control
+	- proper AI
+	- levels
+
 	
 	
 NICE TO HAVE:
