added world and refactor

--- a/desktop/TODO
+++ b/desktop/TODO
@@ -15,7 +15,8 @@ Sprint 2
 	+ center player one wins correctly
 	+ first AI
 	
-Sprint 3	
+Sprint 3
+	- code refactor
 	- command for drones
 	- proper AI
 
