--- a/desktop/TODO
+++ b/desktop/TODO
@@ -19,6 +19,7 @@ Sprint 3
 	+ code refactor
 	+ new selection mode (thanks to VaTTeRGeR)
 	+ fix drone selection color after a new selection (thanks to VaTTeRGeR)
+	+ add first game menu and level selection
 	- command for drones
 	- proper AI
 
