added game screen

--- a/desktop/TODO
+++ b/desktop/TODO
@@ -20,8 +20,10 @@ Sprint 3
 	+ new selection mode (thanks to VaTTeRGeR)
 	+ fix drone selection color after a new selection (thanks to VaTTeRGeR)
 	+ add first game menu and level selection
-	- command for drones
-	- proper AI
+	- ai can win
+	- level definition on file
+	- 3 levels with different configurations
+	- space background
 
 	
 	
