fixed level one and spawn speed

--- a/desktop/TODO
+++ b/desktop/TODO
@@ -23,6 +23,7 @@ Sprint 3
 	+ ai can win
 	
 Sprint 4
+	- fix ai spawn speed
 	- level definition on file
 	- 3 levels with different configurations
 	- space background
