fix level recording issue

--- a/desktop/TODO
+++ b/desktop/TODO
@@ -27,8 +27,8 @@ Sprint 4
 	+ improved menus and controls explanations
 	+ added warmup time for AI
 	+ space background
-	- level definition on file
-	- 3 levels with different configurations
+	+ level definition on file
+	+ 3 levels with different configurations
 
 
 	
