--- a/desktop/TODO
+++ b/desktop/TODO
@@ -29,9 +29,7 @@ Sprint 4
 	+ space background
 	+ level definition on file
 	+ 3 levels with different configurations
-	- right click command always attack station center
-	- for release: update readme, screenshoots for 0.5 tag and push
-
+	+ right click command always attack station center
 
 	
 	
