added station transparent area

--- a/desktop/TODO
+++ b/desktop/TODO
@@ -31,6 +31,13 @@ Sprint 4
 	+ 3 levels with different configurations
 	+ right click command always attack station center
 
+Sprint 5
+	+ station colored area
+	- another AI
+	- more levels
+	- unlockable units
+
+	
 	
 	
 NICE TO HAVE:
