added another AI

--- a/desktop/TODO
+++ b/desktop/TODO
@@ -33,9 +33,10 @@ Sprint 4
 
 Sprint 5
 	+ station colored area
-	- another AI
-	- more levels
+	+ another AI
+	- 3 more levels
 	- unlockable units
+	- for release: screenshoots, update readme, do push and tag 
 
 	
 	
