improved levels loading

--- a/desktop/TODO
+++ b/desktop/TODO
@@ -34,7 +34,8 @@ Sprint 4
 Sprint 5
 	+ station colored area
 	+ another AI
-	- 3 more levels
+	+ swapped level 2 and 3 (thanks to orochii)
+	+ 3 more levels
 	- unlockable units
 	- for release: screenshoots, update readme, do push and tag 
 
