--- a/desktop/TODO
+++ b/desktop/TODO
@@ -36,10 +36,19 @@ Sprint 5
 	+ another AI
 	+ swapped level 2 and 3 (thanks to orochii)
 	+ 3 more levels
-	+ saved level progression on user home dir
-	- unlockable units
-	- for release: set G.DEBUG_LEVELS to false, screenshoots, update readme, do push and tag 
+	+ saved level progression on user home dir on disk
+	+ add as first level a simple tutorial level
+	+ save unlockable units on disk
 
+Sprint 6
+	- unlockable units in menu screen: a set of buttons player can unlock using energy credits => every level unlocked 100 ec
+		first unlockable unit:
+			bomber, 300 ec
+				much slower, are of effect on impact
+	- instead of a percentage, add a circle that indicate planet possession 
+	- a level with more than one starting planet
+	
+	
 	
 	
 	
