added percentage as color and 4 new levels

--- a/desktop/TODO
+++ b/desktop/TODO
@@ -41,12 +41,11 @@ Sprint 5
 	+ save unlockable units on disk
 
 Sprint 6
-	- unlockable units in menu screen: a set of buttons player can unlock using energy credits => every level unlocked 100 ec
-		first unlockable unit:
-			bomber, 300 ec
-				much slower, are of effect on impact
-	- instead of a percentage, add a circle that indicate planet possession 
-	- a level with more than one starting planet
+	+ instead of a percentage, add a circle that indicate planet possession
+ 	+ a level with more than one starting planet
+ 	+ 4 new levels!
+ 	
+ 	- before release check G unlocked levels!!
 	
 	
 	
