added story screen

--- a/desktop/TODO
+++ b/desktop/TODO
@@ -44,6 +44,7 @@ Sprint 6
 	+ instead of a percentage, add a circle that indicate planet possession
  	+ a level with more than one starting planet
  	+ 4 new levels!
+ 	+ added story screen
  	
  	- before release check G unlocked levels!!
 	
